--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.2.2",
+    "prisma": "^5.8.1"
   }
 }
