--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "prisma": "^5.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "nodemon": "^3.0.2",
-    "prettier": "^3.2.2",
-    "prisma": "^5.8.1"
+    "prettier": "^3.2.2"
   }
 }
