--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ADamian17 <adonisdesuvikdo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node ./dist/server.js",
     "dev": "concurrently --handle-input -n server,ts -c 'bgGreen.bold,bgBlue.bold' 'npm:watch:nodemon' 'npm:watch:ts' rs",
     "watch:nodemon": "nodemon dist/server.js",
     "watch:ts": "tsc -w"
