--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/server.js",
     "dev": "concurrently --handle-input -n server,ts -c 'bgGreen.bold,bgBlue.bold' 'npm:watch:nodemon' 'npm:watch:ts' rs",
     "watch:nodemon": "nodemon dist/server.js",
-    "watch:ts": "tsc -w"
+    "watch:ts": "tsc -w",
+    "build": "yarn tsc"
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.21",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
-    "prettier": "^3.2.2"
+    "prettier": "^3.2.2",
+    "typescript": "^5.3.3"
   }
 }
